@@ -446,9 +446,12 @@ AC_ARG_WITH(qt-includes,
        ac_qt_includes="$withval"
     ])
     
+kde_qt_libs_given=no
+
 AC_ARG_WITH(qt-libraries,
     [  --with-qt-libraries     where the qt library is installed.],
     [  ac_qt_libraries="$withval"
+       kde_qt_libs_given=yes
     ])
 
 if test "$ac_qt_includes" = NO || test "$ac_qt_libraries" = NO; then
@@ -535,7 +538,9 @@ else
   qt_includes=$ac_qt_includes
 fi
 
+if test ! "$kde_qt_libs_given" = "yes"; then
 KDE_CHECK_QT_DIRECT(qt_libraries= ,[])
+fi
 
 AC_SUBST(qt_libraries)
 AC_SUBST(qt_includes)
