@@ -1,3 +1,8 @@
+1998-05-16  Stephan Kulow  <coolo@kde.org>
+
+	* acinclude.m4.in: don't use KDE_CHECK_QT_DIRECT, when 
+	--with-qt-libs are given
+
 1998-04-21  Stephan Kulow  <coolo@kde.org>
 
 	* acinclude.m4.in: cool, I found the trick to suppress the ls 
